--- a/modules/axelor-sale/src/main/resources/views/Order.xml
+++ b/modules/axelor-sale/src/main/resources/views/Order.xml
@@ -1,146 +1,164 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <object-views xmlns="http://axelor.com/xml/ns/object-views"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://axelor.com/xml/ns/object-views http://axelor.com/xml/ns/object-views/object-views_5.2.xsd">
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://axelor.com/xml/ns/object-views http://axelor.com/xml/ns/object-views/object-views_5.2.xsd">
 
-  <grid model="com.axelor.sale.db.Order" title="Order Details"
-    name="order-grid">
-    <field name="orderNo" />
-    <field name="orderDate" />
-    <field name="customer" />
-    <field name="totalQuantity" />
-    <field name="totalTax" />
-    <field name="totalPrice" />
-    <field name="orderStatus" />
-  </grid>
-
-
-  <form model="com.axelor.sale.db.Order" title="Order Details"
-    name="order-form" onNew="action-method-on-for-new-set-order-sequence">
-    <panel>
-      <panel colSpan="12">
-        <field name="orderStatus" widget="nav-select" readonly="true"
-          readonlyIf="!confirmed"></field>
-      </panel>
-    </panel>
-
-    <panel itemSpan="12" sidebar="true">
-      <button name="statusDraftBtn" css="btn-primary" title="Draft"
-        hidden="true" showIf="orderStatus =='CANCELED'"
-        onClick="action-sale-order-attrs-on-click-change-statusDraft" />
-      <button name="statusDraftBtn" css="btn-success" title="Open"
-        showIf="orderStatus =='DRAFT'"
-        onClick="action-sale-order-attrs-on-click-change-statusOpen" />
-      <button name="statusDraftBtn" css="btn-warning" title="Closed"
-        showIf="orderStatus =='OPEN'"
-        onClick="action-sale-order-attrs-on-click-change-statusClosed" />
-      <button name="statusDraftBtn" css="btn-danger"
-        title="Canceled" hideIf="orderStatus =='CANCELED'"
-        onClick="action-sale-order-attrs-on-click-change-statusCanceled" />
-    </panel>
+	<grid model="com.axelor.sale.db.Order" title="Order Details"
+		name="order-grid">
+	<toolbar>
+		<button name="printCategoryWiseSaleBtn" title="Category Wise Sale" onClick="action-order-print-report-category-wise-sale"/>
+		<button name="printTotalQtySaleBtn" title="Total Product Qty Sale" onClick="action-order-print-report-total-product-qty-sale"/>
+	</toolbar>
+		<field name="orderNo" />
+		<field name="orderDate" />
+		<field name="customer" />
+		<field name="totalQuantity" />
+		<field name="totalTax" />
+		<field name="totalPrice" />
+		<field name="orderStatus" />
+	</grid>
 
 
-    <panel>
-      <panel colSpan="4">
-        <field name="orderDate" />
-      </panel>
-      <panel colSpan="4">
-        <field name="customer" />
-      </panel>
+	<form model="com.axelor.sale.db.Order" title="Order Details"
+		name="order-form">
+		<toolbar>
+		<button name="printOrderBtn" showIf="id" title="Print" onClick="action-order-print-report" />
+		</toolbar>
+		<panel>
+			<panel colSpan="12">
+				<field name="orderStatus" widget="nav-select" readonly="true"
+					readonlyIf="!confirmed"></field>
+			</panel>
+		</panel>
 
-      <panel colSpan="4">
-        <field name="confirmDate" readonlyIf="confirmed" />
-        <field name="confirmed" widget="boolean-switch" />
-      </panel>
-    </panel>
+		<panel itemSpan="12" sidebar="true">
+			<button name="statusDraftBtn" css="btn-primary" title="Draft"
+				hidden="true" showIf="orderStatus =='CANCELED'"
+				onClick="action-sale-order-attrs-on-click-change-statusDraft" />
+			<button name="statusDraftBtn" css="btn-success" title="Open"
+				showIf="orderStatus =='DRAFT'"
+				onClick="action-sale-order-attrs-on-click-change-statusOpen" />
+			<button name="statusDraftBtn" css="btn-warning" title="Closed"
+				showIf="orderStatus =='OPEN'"
+				onClick="action-sale-order-attrs-on-click-change-statusClosed" />
+			<button name="statusDraftBtn" css="btn-danger"
+				title="Canceled" hideIf="orderStatus =='CANCELED'"
+				onClick="action-sale-order-attrs-on-click-change-statusCanceled" />
+		</panel>
 
-    <panel-related field="saleProducts" editable="true">
-      <field name="product"></field>
-      <field name="price"></field>
-      <field name="taxes"></field>
-      <field name="quantity"
-        onChange="action-method-on-change-set-product-total"></field>
-      <field name="productTotal" readonly="true"></field>
-    </panel-related>
+		<panel>
+			<panel colSpan="4">
+				<field name="orderDate" />
+			</panel>
+			<panel colSpan="4">
+				<field name="customer"  domain="customerStatus = 'active'"/>
+			</panel>
 
-    <panel>
-      <button colSpan="3" name="totalAmount" if="!saleProducts"
-        onClick="action-method-on-change-set-order-total"
-        title="Calculate Total Amt" widget="info-button" css="btn-primary" />
+			<panel colSpan="4">
+				<field name="confirmDate" readonlyIf="confirmed" />
+				<field name="confirmed" widget="boolean-switch" />
+			</panel>
+		</panel>
 
-      <field colOffset="10" title="Tot Qty" readonly="true"
-        name="totalQuantity"></field>
-      <field colOffset="10" name="totalPrice" readonly="true"></field>
-    </panel>
+		<panel-related field="saleProducts" editable="true" >
+			<field name="product"></field>
+			<field name="price"></field>
+			<field name="taxes"></field>
+			<field name="quantity"
+				onChange="action-method-on-change-set-product-total"></field>
+			<field name="productTotal" readonly="true"></field>
+		
+		</panel-related>
+		
+		<panel>
+			<button colSpan="3" name="totalAmount" if="!saleProducts"
+				onClick="action-method-on-change-set-order-total"
+				title="Calculate Total Amt" widget="info-button" css="btn-primary" />
 
-    <panel>
-      <button name="importCountry"
-        onClick="com.axelor.csv.controller.CsvImportController:importCsvDate"
-        title="Import" css="btn-info" />
+			<field colOffset="10" title="Tot Qty" readonly="true"
+				name="totalQuantity"></field>
+			<field colOffset="10" name="totalPrice" readonly="true"></field>
+		</panel>
 
-        <button name="importTest"
-        onClick="data.import"
-        title="Import" css="btn-info" />
+		<panel>
+			<button name="importCountry"
+				onClick="com.axelor.csv.controller.CsvImportController:importCsvDate"
+				title="Import" css="btn-info" />
 
-    </panel>
+			<button name="importTest"
+				onClick="save,action-export-sale-order-export" title="Export"
+				css="btn-info" />
+		</panel>
+	</form>
+	<action-attrs
+		name="action-sale-order-attrs-on-click-change-statusDraft">
+		<attribute name="value" for="orderStatus"
+			expr="eval:orderStatus='DRAFT'" />
+	</action-attrs>
+	<action-attrs
+		name="action-sale-order-attrs-on-click-change-statusOpen">
+		<attribute name="value" for="orderStatus"
+			expr="eval:orderStatus='OPEN'" />
+	</action-attrs>
 
+	<action-attrs
+		name="action-sale-order-attrs-on-click-change-statusClosed">
+		<attribute name="value" for="orderStatus"
+			expr="eval:orderStatus='CLOSED'" />
+	</action-attrs>
 
-  </form>
-
-
-  <action-attrs
-    name="action-sale-order-attrs-on-click-change-statusDraft">
-    <attribute name="value" for="orderStatus"
-      expr="eval:orderStatus='DRAFT'" />
-  </action-attrs>
-
-  <action-attrs
-    name="action-sale-order-attrs-on-click-change-statusOpen">
-    <attribute name="value" for="orderStatus"
-      expr="eval:orderStatus='OPEN'" />
-  </action-attrs>
-
-  <action-attrs
-    name="action-sale-order-attrs-on-click-change-statusClosed">
-    <attribute name="value" for="orderStatus"
-      expr="eval:orderStatus='CLOSED'" />
-  </action-attrs>
-
-
-
-  <action-attrs
-    name="action-sale-order-attrs-on-click-change-statusCanceled">
-    <attribute name="value" for="orderStatus"
-      expr="eval:orderStatus='CANCELED'" />
-  </action-attrs>
-
-
-  <action-method
-    name="action-method-on-change-set-product-total">
-    <call class="com.axelor.sale.db.web.OrderController"
-      method="setProductTotal" />
-  </action-method>
-
-  <action-method
-    name="action-method-on-change-set-order-total">
-    <call class="com.axelor.sale.db.web.OrderController"
-      method="setTotalAmount" />
-  </action-method>
-
-  <action-group name="action-group-on-change-set-total">
-    <action name="action-method-on-change-set-product-total" />
-    <action name="action-method-on-change-set-order-total" />
-  </action-group>
-
-
-
-  <action-method
-    name="action-method-on-for-new-set-order-sequence">
-    <call class="com.axelor.sale.db.web.OrderController"
-      method="setSaleOrderNo" />
-  </action-method>
+	<action-attrs
+		name="action-sale-order-attrs-on-click-change-statusCanceled">
+		<attribute name="value" for="orderStatus"
+			expr="eval:orderStatus='CANCELED'" />
+	</action-attrs>
 
 
+	<action-method
+		name="action-method-on-change-set-product-total">
+		<call class="com.axelor.sale.db.web.OrderController"
+			method="setProductTotal" />
+	</action-method>
 
+	<action-method
+		name="action-method-on-change-set-order-total">
+		<call class="com.axelor.sale.db.web.OrderController"
+			method="setTotalAmount" />
+	</action-method>
 
+	<action-group name="action-group-on-change-set-total">
+		<action name="action-method-on-change-set-product-total" />
+		<action name="action-method-on-change-set-order-total" />
+	</action-group>
+
+	<action-method
+		name="action-method-on-for-new-set-order-sequence">
+		<call class="com.axelor.sale.db.web.OrderController"
+			method="setSaleOrderNo" />
+	</action-method>
+		
+	
+	<action-export name="action-export-sale-order-export"
+		output="${orderNo}/${date}${time}" download="true">
+		<export name="${orderNo}.xml"
+			template="data-export/sale-order-template.xml" />
+	</action-export>
+	
+
+	<action-report output="${date}${time}" name="action-order-print-report" design="sale_order.rptdesign">
+		<param name="OrderId" expr="eval: id" />
+	</action-report>
+	
+	
+	
+	<action-report output="${date}${time}" name="action-order-print-report-category-wise-sale" design="sale_category_wise.rptdesign">
+	</action-report>
+	
+	<action-report output="${date}${time}" name="action-order-print-report-total-product-qty-sale" design="total_product_sale.rptdesign">
+	</action-report>
+	
+	
+	
+	
+		
 </object-views>
