add customer details report

--- a/modules/axelor-person/src/main/resources/views/Contact.xml
+++ b/modules/axelor-person/src/main/resources/views/Contact.xml
@@ -10,24 +10,29 @@
     <option value="deleted">Deleted</option>
   </selection>
 
+  <grid model="com.axelor.person.db.Contact" title="Person Details"
+    name="person-grid">
+    <toolbar>
+      <button name="printCustomerBtn" title="Customer Details"
+        onClick="action-order-print-report-customer" />
+        <!-- <button name="printCustomerBtn" title="Customer Details"
+        onClick="com.axelor.person.db.web.ContactController:addAttachmentPath" /> -->
 
-  <grid model="com.axelor.person.db.Contact" title="Person Details" name="person-grid">
-    <field name="firstName"/>
-    <field name="lastName"/>
-    <field name="email"/>
-    <field name="phone"/>
-    <field name="company"/>
+    </toolbar>
+    <field name="firstName" />
+    <field name="lastName" />
+    <field name="email" />
+    <field name="phone" />
+    <field name="company" />
   </grid>
 
-  <tree name="contact-email-tree" title="Contact Email Tasks"
-    width="50%">
+  <tree name="contact-email-tree" title="Contact Email Tasks" width="50%">
     <!-- define tree columns -->
     <column name="firstName" type="string" />
     <column name="email" type="string" />
 
     <!-- define 1st level node -->
-    <node model="com.axelor.person.db.Contact"
-      onClick="contacts.task.open.contact">
+    <node model="com.axelor.person.db.Contact" onClick="contacts.task.open.contact">
       <field name="firstName" as="firstName" />
     </node>
 
@@ -38,8 +43,8 @@
     </node>
   </tree>
 
-  <cards name="person-cards" title="Persons"
-    model="com.axelor.person.db.Contact" orderBy="fullName">
+  <cards name="person-cards" title="Persons" model="com.axelor.person.db.Contact"
+    orderBy="fullName">
     <field name="fullName" />
     <field name="phone" />
     <field name="email" />
@@ -64,14 +69,13 @@
   </cards>
 
   <form model="com.axelor.person.db.Contact" title="Person Form"
-    name="person-form" onSave="action-contact-group-on-save-attribute" >
+    name="person-form" onSave="action-contact-group-on-save-attribute">
     <panel title="Personal" css="panel-red">
       <panel colSpan="4">
-        <field name="image" showTitle="false" colSpan="12"></field>
+        <field name="image"  widget="Image"  showTitle="false" colSpan="12"></field>
       </panel>
       <panel colSpan="8">
-        <field name="fullName" title="Name" readonly="false"
-          colSpan="12">
+        <field name="fullName" title="Name" readonly="false" colSpan="12">
           <editor x-show-titles="false">
             <field name="title" colSpan="2" />
             <field name="firstName" colSpan="5" />
@@ -87,14 +91,13 @@
     <panel title="Contacts" css="panel-green">
       <field name="emails">
         <editor layout="table" x-show-titles="false">
-          <field name="email"/>
+          <field name="email" />
         </editor>
       </field>
 
       <field name="phones">
         <editor layout="table" x-show-titles="false">
-          <field name="phoneType" width="100px"
-            selection="phone.type.selection" />
+          <field name="phoneType" width="100px" selection="phone.type.selection" />
           <field name="phone" css="border-left-none" />
         </editor>
       </field>
@@ -122,8 +125,7 @@
 
 
   <kanban name="person-kanban" sequenceBy="priority"
-    model="com.axelor.person.db.Contact" columnBy="status"
-    title="Person Details">
+    model="com.axelor.person.db.Contact" columnBy="status" title="Person Details">
     <field name="firstName" />
     <field name="lastName" />
     <field name="fullName" />
@@ -139,8 +141,8 @@
       ]]></template>
   </kanban>
 
-  <action-view name="contacts.task.open.contact"
-    title="Contact" model="com.axelor.person.db.Contact">
+  <action-view name="contacts.task.open.contact" title="Contact"
+    model="com.axelor.person.db.Contact">
     <view type="grid" name="person-grid" />
     <view type="form" name="person-form" />
     <domain>self.id= :contact_id</domain>
@@ -149,21 +151,26 @@
   </action-view>
 
   <action-method name="action-contact-method-on-save-set-full-name">
-    <call class="com.axelor.person.db.web.ContactController" method="setFullName"/>
+    <call class="com.axelor.person.db.web.ContactController" method="setFullName" />
   </action-method>
 
   <action-method name="action-contact-method-on-save-set-email">
-    <call class="com.axelor.person.db.web.ContactController" method="setEmail"/>
+    <call class="com.axelor.person.db.web.ContactController" method="setEmail" />
   </action-method>
 
   <action-method name="action-contact-method-on-save-set-phone">
-    <call class="com.axelor.person.db.web.ContactController" method="setPhone"/>
+    <call class="com.axelor.person.db.web.ContactController" method="setPhone" />
   </action-method>
 
   <action-group name="action-contact-group-on-save-attribute">
-    <action name="action-contact-method-on-save-set-full-name"/>
-    <action name="action-contact-method-on-save-set-email"/>
-    <action name="action-contact-method-on-save-set-phone"/>
+    <action name="action-contact-method-on-save-set-full-name" />
+    <action name="action-contact-method-on-save-set-email" />
+    <action name="action-contact-method-on-save-set-phone" />
   </action-group>
-
+  
+  <action-report output="${date}${time}"
+    name="action-order-print-report-customer" design="customer_report.rptdesign">
+    <param name="AttachmentPath" expr="/home/axelor/.axelor/attachments/"/>
+  </action-report>
+  
 </object-views>
